<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:minHeight="25dp"
    android:minWidth="25dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:minWidth="25dp"
        android:minHeight="25dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.0dp"
            android:minWidth="25dp"
            android:minHeight="25dp">

            <ImageView
                android:id="@+id/imgUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:contentDescription="@string/iUsuario"
                android:src="@drawable/iusuario_30px" />

            <EditText
                android:id="@+id/txtUsuarioLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:hint="@string/usuarioLogin"
                android:imeOptions="actionGo"
                android:inputType="textPersonName"
                android:linksClickable="false"
                android:maxLines="1"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textColor="@color/Blanco"
                android:textColorHint="@color/Blanco"
                android:textSize="20sp"
                android:longClickable="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.0px"
            android:minWidth="25dp"
            android:minHeight="25dp">

            <ImageView
                android:id="@+id/imgContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:contentDescription="@string/iContraseña"
                android:src="@drawable/icontrasena_30px" />

            <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:hint="@string/contraseñaLogin"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:linksClickable="false"
                android:maxLines="1"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textColor="@color/Blanco"
                android:textColorHint="@color/Blanco"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="200dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:autoText="false"
            android:background="@drawable/esquinaredonda"
            android:gravity="center"
            android:text="@string/botonLogin"
            android:textColor="@color/Blanco"
            android:textSize="25sp"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="650dp"
        android:shadowColor="#000000"
        android:shadowRadius="20"
        android:text="@string/recuperarContraseña"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>